Colors now overlap correctly

--- a/css/colormode.css
+++ b/css/colormode.css
@@ -41,7 +41,7 @@ input {
 }
 
 body, button, .calendar-grid div:hover, .selectedDay, .todo-date-container, .header-items input:checked + .slider, .slider, .todo-counter {
-    background-color: var(--background-color-variant);
+    background-color: var(--background-color-variant) !important;
   }
 
 button:hover {
